--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "mocha": "^3.2.0",
     "standard": "^10.0.1",
     "yeoman-assert": "^3.0.0",
-    "yeoman-test": "^1.6.0"
+    "yeoman-test": "^1.6.0",
+    "coveralls": "^2.13.0"
   },
   "keywords": [
     "yeoman-generator",
