--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "generator-leelow-nm",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "Scaffold out a node module",
   "license": "MIT",
-  "repository": "leelow/generator-leelow-nm",
+  "repository": "https://github.com/Leelow/generator-leelow-nm",
   "author": {
     "name": "Leo Lozach",
     "email": "leo.lozach@gmail.com",
