--- a/app/templates/travis.yml
+++ b/app/templates/travis.yml
@@ -9,5 +9,7 @@ os:
   - osx
 install:
   - yarn install<% if (coveralls) { %>
+<% if (coveralls) { %>after_success:
+  - yarn run coverage<% } %>
 after_script:
   - 'cat coverage/lcov.info | ./node_modules/.bin/coveralls'<% } %>
